# obs-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
graphic-offsets/: Cargo.toml
graphic-offsets/src/: lib.rs
inject-helper/: Cargo.toml
inject-helper/src/: lib.rs
obs-client/: Cargo.toml
obs-client-ffi/: Cargo.toml  README.md  cbindgen.toml  obs-client.h  obs-client.hpp
obs-client-ffi/src/: lib.rs
obs-client/examples/: basic.rs
obs-client/src/: error.rs  hook_info.rs  lib.rs
obs-client/src/utils/: color.rs  d3d11.rs  event.rs  file_mapping.rs  mod.rs  mutex.rs  pipe.rs  process.rs
