[package]
name = "obs-client"
version = "0.1.0"
authors = ["not-matthias <26800596+not-matthias@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphic-offsets = { path = "../graphic-offsets" }
inject-helper = { path = "../inject-helper" }

winapi = { version = "0.3.9", features = ["winuser", "windef", "synchapi", "winnt", "winbase", "memoryapi", "errhandlingapi", "d3d11", "d3dcommon", "winerror", "dxgi", "securitybaseapi", "minwinbase", "namedpipeapi", "ioapiset"] }
simple_logger = "1.11.0"
log = "0.4.11"
wio = "0.2.2"
